# Hip-Hop-Web

./: .gitignore  KanyeWest.ipynb  README.md  pyproject.toml  requirements.txt
hip_hop_web/: Artist.py
notebooks/: Untitled.ipynb
src/: Artist.py  gather_songs.py
