[tool.poetry]
name = "hip-hop-web"
version = "0.1.0"
description = "Artist network Graphs"
authors = ["Jiafi <jordanwolinsky@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
lyricsgenius = "^3.0.1"
matplotlib = "^3.5.1"
networkx = "^2.7.1"

[tool.poetry.dev-dependencies]
jupyterlab = "^3.3.2"
pyvis = "^0.1.9"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
